src/syntax_analysis/expression/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expression__tests__test_syntax_analysis_for_integer_expression_case2.snap
---
source: src/syntax_analysis/expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "INTEGER": {
            "integer_token": {
              "INTEGER": {
                "literal": "12"
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
